--- a/app/views/grill/grillManage.html
+++ b/app/views/grill/grillManage.html
@@ -89,3 +89,6 @@
         </div>
     </div>
 </div>
+<button ng-if="IsGrillToReception" id="fixedbuttonLeft" type="submit" class="btn bgm-teal btn-icon" data-ng-click="return()">
+        <i class="md md-arrow-back"></i>
+</button>
