--- a/app/views/humidity/humidityAddToCylinder.html
+++ b/app/views/humidity/humidityAddToCylinder.html
@@ -6,10 +6,11 @@
             </div>
             <div class="card-body card-padding">
                 <div class="form-group">
-                    <label for="iusername" class="col-sm-2 control-label">Porcentaje de Humedad</label>
+                    <label for="iusername" class="col-sm-2 control-label">Porcentaje de Humedad *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input required type="number" min="1" name="humidityPer" class="form-control input-sm" id="iusername" placeholder="porcentaje de humedad" ng-model="humidityPercentage">
+                            <input required type="number" min="1" name="humidityPer" class="form-control input-sm" id="iusername" placeholder="porcentaje de humedad"
+                                ng-model="humidityPercentage">
                             <small class="help-block has-error" style="color:red" ng-show="humidityForm.humidityPer.$error.number">Numero no valido.</small>
                         </div>
                     </div>
@@ -81,3 +82,6 @@
         </div>
     </div>
 </div>
+<button id="fixedbuttonLeft" type="submit" class="btn bgm-teal btn-icon" ng-click="return()">
+        <i class="md md-arrow-back"></i>
+</button>
