--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -17,18 +17,18 @@
             <table class="table table-striped table-vmiddle">
                 <thead>
                     <tr>
-                        <th data-column-id="">Id</th>
-                        <th data-column-id="">Folio</th>
-                        <th data-column-id="">Productor</th>
-                        <th data-column-id="">Campo</th>
-                        <th data-column-id="">Variedad</th>
-                        <th data-column-id="">Camion/Placas</th>
-                        <th data-column-id="">Recibido</th>
-                        <th data-column-id="">Cilindro</th>
-                        <th data-column-id="">Fecha de Captura</th>
-                        <th data-column-id="">Horas de Secado</th>
+                        <th>Id</th>
+                        <th>Folio</th>
+                        <th>Productor</th>
+                        <th>Campo</th>
+                        <th>Variedad</th>
+                        <th>Camion/Placas</th>
+                        <th>Recibido</th>
+                        <th>Cilindro</th>
+                        <th>Fecha de Captura</th>
+                        <th>Horas de Secado</th>
                         <th>Parrillas</th>
-                        <th data-column-id="">Opciones</th>
+                        <th>Opciones</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -44,8 +44,8 @@
                         <td>{{reception.EntryDate | date:'dd/MM/yyyy HH:mm'}}</td>
                         <td>{{reception.HeatHoursDrying}}</td>
                         <td>{{reception.Grills}}</td>
-                        <td ng-hide="IsGrillToReception">
-                            <button class="btn btn-icon command-edit" ng-click="redirectUpdate(reception)" data-toggle="tooltip" data-placement="bottom"
+                        <td ng-if="!IsGrillToReception">
+                            <button class="btn btn-icon command-edit" ng-click="redirectUpdate(reception.Id,reception,reception.Folio)" data-toggle="tooltip" data-placement="bottom"
                                 title="Modificar">
                             <span class="md md-edit"></span>
                         </button>
@@ -62,7 +62,7 @@
                             <span class="md md-description"></span>
                         </button>
                         </td>
-                        <td ng-show="IsGrillToReception">
+                        <td ng-if="IsGrillToReception">
                             <div class="toggle-switch">
                                 <input id="{{reception.Id}}" type="checkbox" hidden="hidden" ng-model="reception.IsAlreadyAssigned" ng-change="addReceptionToGrill(reception.Id, reception.IsAlreadyAssigned)">
                                 <label for="{{reception.Id}}" class="ts-helper"></label>
@@ -74,3 +74,6 @@
         </div>
     </div>
 </div>
+<button ng-if="IsGrillToReception" id="fixedbuttonLeft" type="submit" class="btn bgm-teal btn-icon" ng-click="return()">
+        <i class="md md-arrow-back"></i>
+</button>
