--- a/app/views/remission/remissionAdd.html
+++ b/app/views/remission/remissionAdd.html
@@ -69,7 +69,8 @@
                     <label for="driver" class="col-sm-2 control-label">Conductor *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="text" name="Driver" class="form-control input-sm" id="driver" placeholder="conductor" ng-minlength="3" ng-maxlength="150" data-ng-model="remission.Driver">
+                            <input type="text" name="Driver" class="form-control input-sm" id="driver" placeholder="conductor" ng-minlength="3" ng-maxlength="150"
+                                data-ng-model="remission.Driver">
                             <small class="help-block has-error" style="color:red" ng-show="remissionForm.Driver.$error.minlength">El nombre del conductor debe contener al menos 3 caracteres.</small>
                             <small class="help-block has-error" style="color:red" ng-show="remissionForm.Driver.$error.maxlength">El nombre del conductor es demasiado extenso, debe contener menos de 150 caracteres.</small>
                         </div>
@@ -79,7 +80,8 @@
                     <label for="elaborate" class="col-sm-2 control-label">Elaboro *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input required name="Elaborate" type="text" class="form-control input-sm" id="elaborate" placeholder="elaboro" ng-minlength="3" ng-maxlength="150" data-ng-model="remission.Elaborate">
+                            <input required name="Elaborate" type="text" class="form-control input-sm" id="elaborate" placeholder="elaboro" ng-minlength="3"
+                                ng-maxlength="150" data-ng-model="remission.Elaborate">
                             <small class="help-block has-error" style="color:red" ng-show="remissionForm.Elaborate.$error.minlength">Este campo debe contener al menos 3 caracteres.</small>
                             <small class="help-block has-error" style="color:red" ng-show="remissionForm.Elaborate.$error.maxlength">Este campo es demasiado extenso, debe contener menos de 150 caracteres.</small>
                         </div>
@@ -90,16 +92,10 @@
                         <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveRemission(remission)" ng-disabled="!remissionForm.$valid">Guardar</button>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div data-ng-hide="message==''" class="alert alert-danger">
-                        {{message}}
-                    </div>
-                </div>
             </div>
         </form>
     </div>
-
-    <button id="fixedbuttonLeft" type="submit" class="btn bgm-teal btn-icon" data-ng-click="redirectToReception()">
-        <i class="md md-arrow-back"></i>
-    </button>
 </div>
+<button id="fixedbuttonLeft" type="submit" class="btn bgm-teal btn-icon" data-ng-click="return()">
+        <i class="md md-arrow-back"></i>
+</button>
