--- a/app/views/remission/remissionUpdate.html
+++ b/app/views/remission/remissionUpdate.html
@@ -1,91 +1,93 @@
 <div class="animated bounceInRight">
     <div class="card">
-        <form name="remissionForm" class="form-horizontal" role="form">
+        <form name="updateRemissionForm" class="form-horizontal" role="form">
             <div class="card-header">
                 <h2>Actualizar Remisión</h2>
             </div>
             <div class="card-body card-padding">
                 <div class="form-group">
-                    <label for="cultivation" class="col-sm-2 control-label">Cultivo</label>
+                    <label for="cultivation" class="col-sm-2 control-label">Cultivo *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input required type="text" class="form-control input-sm" id="cultivation" name="Cultivation" placeholder="cultivo" data-ng-model="remission.Cultivation">
-                            <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.Cultivation.$error.required">Cultivo es requerido.</small>
+                            <input required type="text" name="Cultivation" class="form-control input-sm" id="cultivation" placeholder="cultivo" ng-minlength="3"
+                                ng-maxlength="150" data-ng-model="remission.Cultivation">
+                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Cultivation.$error.minlength">Este campo debe contener al menos 3 caracteres.</small>
+                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Cultivation.$error.maxlength">Este campo es demasiado extenso, debe contener menos de 150 caracteres.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="batch" class="col-sm-2 control-label">Huerta/Lote</label>
+                    <label for="batch" class="col-sm-2 control-label">Huerta/Lote *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input required type="text" class="form-control input-sm" id="batch" placeholder="huerta o lote" name="Batch" data-ng-model="remission.Batch">
-                            <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.Batch.$error.required">Huerta o lote es requerido.</small>
+                            <input required type="text" name="Batch" class="form-control input-sm" id="batch" placeholder="huerta o lote" ng-minlength="3"
+                                ng-maxlength="150" data-ng-model="remission.Batch">
+                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Batch.$error.minlength">Este campo debe contener al menos 3 caracteres.</small>
+                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Batch.$error.maxlength">Este campo es demasiado extenso, debe contener menos de 150 caracteres.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="quantity" class="col-sm-2 control-label">Cantidad</label>
+                    <label for="quantity" class="col-sm-2 control-label">Cantidad *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input required type="number" min="1" step="any" class="form-control input-sm" id="quantity" placeholder="cantidad" name="Quantity" data-ng-model="remission.Quantity">
-                            <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.Quantity.$error.required">Cantidad es requerido.</small>
-                            <small class="help-block has-error" style="color:yellow" ng-show="!remissionForm.$pristine && remissionForm.Quantity.$error.number">Cantidad debe ser campo númerico.</small>
+                            <input type="number" min="1" name="Quantity" class="form-control input-sm" id="quantity" placeholder="cantidad" data-ng-model="remission.Quantity">
+                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Quantity.$error.number">Numero no valido.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="butler" class="col-sm-2 control-label">Mayordomo</label>
+                    <label for="butler" class="col-sm-2 control-label">Mayordomo *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input required type="text" class="form-control input-sm" id="butler" placeholder="mayordomo" name="Butler" data-ng-model="remission.Butler">
-                            <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.Butler.$error.required">Mayordomo es requerido.</small>
+                            <input required type="text" name="Butler" class="form-control input-sm" id="butler" placeholder="mayordomo" ng-minlength="3"
+                                ng-maxlength="150" data-ng-model="remission.Butler">
+                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Butler.$error.minlength">Este campo debe contener al menos 3 caracteres.</small>
+                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Butler.$error.maxlength">Este campo es demasiado extenso, debe contener menos de 150 caracteres.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="transportNumber" class="col-sm-2 control-label">Transporte No.</label>
+                    <label for="transportNumber" class="col-sm-2 control-label">Transporte No. *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input required type="number" min="1" class="form-control input-sm" id="transportNumber" placeholder="Nombre de Usuario" data-ng-model="remission.TransportNumber">
-                            <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.TransportNumber.$error.required">Número Transporte es requerido.</small>
-                            <small class="help-block has-error" style="color:yellow" ng-show="!remissionForm.$pristine && remissionForm.TransportNumber.$error.number">Debe ser campo númerico.</small>
+                            <input required type="number" min="1" name="Transportnumber" class="form-control input-sm" id="transportNumber" placeholder="numero de transporte"
+                                data-ng-model="remission.TransportNumber">
+                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Transportnumber.$error.number">Numero no valido.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="driver" class="col-sm-2 control-label">Conductor</label>
+                    <label for="driver" class="col-sm-2 control-label">Conductor *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input required type="text" class="form-control input-sm" id="driver" placeholder="conductor" name="Driver" data-ng-model="remission.Driver">
-                            <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.Driver.$error.required">Conductor es requerido.</small>
+                            <input type="text" name="Driver" class="form-control input-sm" id="driver" placeholder="conductor" ng-minlength="3" ng-maxlength="150"
+                                data-ng-model="remission.Driver">
+                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Driver.$error.minlength">El nombre del conductor debe contener al menos 3 caracteres.</small>
+                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Driver.$error.maxlength">El nombre del conductor es demasiado extenso, debe contener menos de 150 caracteres.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="elaborate" class="col-sm-2 control-label">Elaboro</label>
+                    <label for="elaborate" class="col-sm-2 control-label">Elaboro *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input required type="text" class="form-control input-sm" id="elaborate" placeholder="elaboro" name="Elaborate" data-ng-model="remission.Elaborate">
-                            <small class="help-block has-error" style="color:red" ng-show="!remissionForm.$pristine && remissionForm.Elaborate.$error.required">Elaboro es campo requerido.</small>
+                            <input required name="Elaborate" type="text" class="form-control input-sm" id="elaborate" placeholder="elaboro" ng-minlength="3"
+                                ng-maxlength="150" data-ng-model="remission.Elaborate">
+                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Elaborate.$error.minlength">Este campo debe contener al menos 3 caracteres.</small>
+                            <small class="help-block has-error" style="color:red" ng-show="updateRemissionForm.Elaborate.$error.maxlength">Este campo es demasiado extenso, debe contener menos de 150 caracteres.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="UpdateRemission()" ng-disabled="!remissionForm.$valid">Actualizar</button>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div data-ng-hide="message==''" class="alert alert-danger">
-                        {{message}}
+                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="updateRemission()" ng-disabled="!updateRemissionForm.$valid">Actualizar</button>
                     </div>
                 </div>
             </div>
         </form>
-        
     </div>
-
-    <button id="fixedbuttonLeft" type="submit" class="btn bgm-teal btn-icon" data-ng-click="redirectToReception()">
-        <i class="md md-arrow-back"></i>
-    </button>
 </div>
+<button id="fixedbuttonLeft" type="submit" class="btn bgm-teal btn-icon" data-ng-click="return()">
+        <i class="md md-arrow-back"></i>
+</button>
