--- a/app/views/sampling/samplingUpdate.html
+++ b/app/views/sampling/samplingUpdate.html
@@ -1,19 +1,17 @@
-<br/>
-<br>
 <div class="animated bounceInRight">
     <div class="card">
-        <form name="samplingForm" class="form-horizontal" role="form">
+        <form name="updateSamplingForm" class="form-horizontal" role="form">
             <div class="card-header">
                 <h2>Actualizar muestreo</h2>
             </div>
             <div class="card-body card-padding">
                 <div class="form-group">
-                    <label for="date" class="col-sm-2 control-label">Fecha</label>
+                    <label for="date" class="col-sm-2 control-label">Fecha *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input type="text" disabled required class="form-control input-sm" id="samplingDate" placeholder="fecha de captura" value="{{ data.dateDropDownLink | date:'dd-MM-yyyy HH:mm a' }}">
                             <div class="dropdown">
-                                <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target="#" href="#"><i class="md md-event"></i></a>
+                                <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target href><i class="md md-event"></i></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <datetimepicker data-ng-model="data.dateDropDownLink" data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }" />
                                 </ul>
@@ -22,66 +20,64 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="sampleWeight" class="col-sm-2 control-label">Peso</label>
+                    <label for="sampleWeight" class="col-sm-2 control-label">Peso *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="number" min="0" step="any" required class="form-control input-sm" id="sampleWeight" name="SampleWeight" placeholder="Peso" data-ng-model="sampling.SampleWeight">
-                            <small class="help-block has-error" style="color:#FFBF00" ng-show="!samplingForm.$pristine && samplingForm.Performance.$error.number">Tiene que ser un valor númerico.</small>
-                            <small class="help-block has-error" style="color:red" ng-show="!samplingForm.$pristine && samplingForm.SampleWeight.$error.required">El peso es requerido.</small>
+                            <input required type="number" min="1" name="Sampleweight" class="form-control input-sm" id="sampleWeight" placeholder="peso"
+                                ng-model="sampling.SampleWeight">
+                            <small class="help-block has-error" style="color:red" ng-show="updateSamplingForm.Sampleweight.$error.number">Numero no valido.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="HumidityPercent" class="col-sm-2 control-label">Porciento de Humedad</label>
+                    <label for="HumidityPercent" class="col-sm-2 control-label">Porcentaje de Humedad *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="number" min="0"  step="any" required class="form-control input-sm" id="HumidityPercent" name="HumidityPercent" placeholder="Porciento de Humedad" data-ng-model="sampling.HumidityPercent">
-                            <small class="help-block has-error" style="color:#FFBF00" ng-show="!samplingForm.$pristine && samplingForm.HumidityPercent.$error.number">Tiene que ser un valor númerico.</small>
-                            <small class="help-block has-error" style="color:red" ng-show="!samplingForm.$pristine && samplingForm.HumidityPercent.$error.required">Porciento de Humedad es requerido.</small>
+                            <input required type="number" min="1" step="any" name="Humiditypercent" class="form-control input-sm" id="HumidityPercent"
+                                placeholder="porcentaje de humedad" ng-model="sampling.HumidityPercent">
+                            <small class="help-block has-error" style="color:red" ng-show="updateSamplingForm.Humiditypercent.$error.number">Numero no valido.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="WalnutNumber" class="col-sm-2 control-label">Número de nueces</label>
+                    <label for="WalnutNumber" class="col-sm-2 control-label">Número de nueces *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="number" min="0" required class="form-control input-sm" id="WalnutNumber" name="WalnutNumber" placeholder="Número de nueces" data-ng-model="sampling.WalnutNumber">
-                            <small class="help-block has-error" style="color:#FFBF00" ng-show="!samplingForm.$pristine && samplingForm.WalnutNumber.$error.number">Tiene que ser un valor númerico.</small>
-                            <small class="help-block has-error" style="color:red" ng-show="!samplingForm.$pristine && samplingForm.WalnutNumber.$error.required">Número de nueces son requerido.</small>
+                            <input required type="number" min="1" name="Walnutnumber" class="form-control input-sm" id="WalnutNumber" placeholder="número de nueces"
+                                ng-model="sampling.WalnutNumber">
+                            <small class="help-block has-error" style="color:red" ng-show="updateSamplingForm.Walnutnumber.$error.number">Numero no valido.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="Performance" class="col-sm-2 control-label">Rendimiento</label>
+                    <label for="Performance" class="col-sm-2 control-label">Rendimiento *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input required type="number"  min="0" step="any" ng-class="{error: !samplingForm.$pristine && samplingForm.Performance.$error.required}" class="form-control input-sm" name="Performance" id="Performance" placeholder="Rendimiento" data-ng-model="sampling.Performance">
-                            <small class="help-block has-error" style="color:#FFBF00" ng-show="!samplingForm.$pristine && samplingForm.Performance.$error.number">Tiene que ser un valor númerico.</small>
-                            <small class="help-block has-error" style="color:red" ng-show="!samplingForm.$pristine && samplingForm.Performance.$error.required">Rendimiento es requerido.</small>
+                            <input required type="number" min="1" class="form-control input-sm" name="Performance" id="Performance" placeholder="rendimiento"
+                                ng-model="sampling.Performance">
+                            <small class="help-block has-error" style="color:red" ng-show="updateSamplingForm.Performance.$error.number">Numero no valido.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="TotalWeightOfEdibleNuts" class="col-sm-2 control-label">Peso total de nueces Comestibles</label>
+                    <label for="TotalWeightOfEdibleNuts" class="col-sm-2 control-label">Peso total de nueces Comestibles *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="number" min="0" step="any" class="form-control input-sm" id="TotalWeightOfEdibleNuts" name="TotalWeightOfEdibleNuts" placeholder="Peso total de nueces Comestibles" data-ng-model="sampling.TotalWeightOfEdibleNuts">
-                            <small class="help-block has-error" style="color:#FFBF00" ng-show="!samplingForm.$pristine && samplingForm.TotalWeightOfEdibleNuts.$error.number">Tiene que ser un valor númerico.</small>
-                            <small class="help-block has-error" style="color:red" ng-show="!samplingForm.$pristine && samplingForm.TotalWeightOfEdibleNuts.$error.number">Tiene que ser un valor númerico.</small>
+                            <input type="number" min="1" class="form-control input-sm" id="TotalWeightOfEdibleNuts" name="Totalweightofediblenuts" placeholder="peso total de nueces comestibles"
+                                ng-model="sampling.TotalWeightOfEdibleNuts">
+                            <small class="help-block has-error" style="color:red" ng-show="updateSamplingForm.Totalweightofediblenuts.$error.number">Numero no valido.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="UpdateSampling()" ng-disabled="!samplingForm.$valid">Guardar</button>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div data-ng-hide="message==''" class="alert alert-danger">
-                        {{message}}
+                        <button type="submit" class="btn btn-primary btn-sm" ng-click="UpdateSampling(sampling)" ng-disabled="!updateSamplingForm.$valid">Actualizar</button>
                     </div>
                 </div>
             </div>
         </form>
     </div>
 </div>
+<button id="fixedbuttonLeft" type="submit" class="btn bgm-teal btn-icon" data-ng-click="return()">
+        <i class="md md-arrow-back"></i>
+</button>
